--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <module>020-ipring-juc</module>
         <module>003-ipring-zmq</module>
         <module>004-ipring-socket</module>
+        <module>050-ipring-odyssey</module>
+        <module>100-ipring-mysql</module>
+        <module>099-ipring-redis</module>
     </modules>
 
     <properties>
