feat: 添加文档项目，统一整理文档

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>100-ipring-mysql</module>
         <module>099-ipring-redis</module>
         <module>021-ipring-jvm</module>
+        <module>888-ipring-markdown</module>
     </modules>
 
     <properties>
