--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+/.idea/
 *.iws
 *.iml
 *.ipr
@@ -28,3 +28,4 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
