--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>011-ipring-framework</module>
         <module>012-ipring-docker</module>
         <module>800-ipring-htmlcss</module>
+        <module>013-ipring-spring</module>
     </modules>
 
     <properties>
