--- a/004-ipring-socket/pom.xml
+++ b/004-ipring-socket/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>004-ipring-websocket</artifactId>
+    <artifactId>004-ipring-socket</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
