--- a/030-ipring-workflow/pom.xml
+++ b/030-ipring-workflow/pom.xml
@@ -22,44 +22,26 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!--camunda-->
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--camunda-->
+        <!--<dependency>
             <groupId>org.camunda.bpm</groupId>
             <artifactId>camunda-engine</artifactId>
             <version>7.16.0</version>
-        </dependency>
+        </dependency>-->
 
         <!--Activiti-->
         <dependency>
             <groupId>org.activiti</groupId>
-            <artifactId>activiti-engine</artifactId>
+            <artifactId>activiti-spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-bpmn-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-bpmn-converter</artifactId>
-        </dependency>
-        <!--bpmn json数据转换-->
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-json-converter</artifactId>
-        </dependency>
-        <!--bpmn布局-->
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-bpmn-layout</artifactId>
-        </dependency>
-        <!--Activiti云支持-->
-        <!--<dependency>
-            <groupId>org.activiti.cloud</groupId>
-            <artifactId>activiti-cloud-services-api</artifactId>
-        </dependency>-->
     </dependencies>
 </project>
