--- a/011-ipring-framework/pom.xml
+++ b/011-ipring-framework/pom.xml
@@ -21,5 +21,12 @@
             <artifactId>000-ipring-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--swagger ui 优化-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 </project>
