--- a/ipring-015-dubbo/ipring-dubbo-provide/src/main/resources/archetype-resources/pom.xml
+++ b/ipring-015-dubbo/ipring-dubbo-provide/src/main/resources/archetype-resources/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>$org.ipring</groupId>
-  <artifactId>$ipring-015-dubbo</artifactId>
+  <artifactId>$ipring-dubbo-provide</artifactId>
   <version>$1.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
