--- a/ipring-060-investigate-image/pom.xml
+++ b/ipring-060-investigate-image/pom.xml
@@ -52,6 +52,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-vertexai</artifactId>
+            <version>1.15.0</version>
         </dependency>
 
         <!--<dependency>
