--- a/ipring-000-common/pom.xml
+++ b/ipring-000-common/pom.xml
@@ -165,6 +165,10 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.17</version>
         </dependency>
-
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
     </dependencies>
 </project>
