--- a/ipring-060-investigate-image/pom.xml
+++ b/ipring-060-investigate-image/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>ipring-060-investigate-image</artifactId>
-    <name>Archetype - ipring-060-investigate-image</name>
+    <name>ipring-060-investigate-image</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -68,4 +68,35 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>-->
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>application.yml</include>
+                    <include>bootstrap.properties</include>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
+
+        <finalName>${project.name}</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
