--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
         <module>ipring-012-docker</module>
         <module>ipring-800-htmlcss</module>
         <module>ipring-030-workflow</module>
-        <module>ipring-015-dubbo</module>
-        <module>ipring-015-dubbo/ipring-dubbo-client</module>
-        <module>ipring-015-dubbo/ipring-dubbo-consumer</module>
-        <module>ipring-015-dubbo/ipring-dubbo-provide</module>
+<!--        <module>ipring-015-dubbo</module>-->
+<!--        <module>ipring-015-dubbo/ipring-dubbo-client</module>-->
+<!--        <module>ipring-015-dubbo/ipring-dubbo-consumer</module>-->
+<!--        <module>ipring-015-dubbo/ipring-dubbo-provide</module>-->
         <module>ipring-060-investigate-image</module>
     </modules>
 
