--- a/ipring-060-investigate-image/pom.xml
+++ b/ipring-060-investigate-image/pom.xml
@@ -55,6 +55,12 @@
             <version>1.15.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-ai-openai</artifactId>
+            <version>1.0.0-beta.13</version>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
