--- a/ipring-060-investigate-image/src/main/resources/application.yml
+++ b/ipring-060-investigate-image/src/main/resources/application.yml
@@ -8,7 +8,10 @@ spring:
   jackson:
     deserialization:
       fail_on_unknown_properties: false
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 ipring:
   swagger:
     enable: true
