--- a/ipring-060-investigate-image/pom.xml
+++ b/ipring-060-investigate-image/pom.xml
@@ -48,6 +48,12 @@
             <version>6.0-1.5.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>5.15.0</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.bytedeco</groupId>
