feat: 改造工具类输出为自定义格式

--- a/ipring-013-jacg/pom.xml
+++ b/ipring-013-jacg/pom.xml
@@ -25,8 +25,14 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- Log4j2 核心 + SLF4J 桥接（统一日志门面） -->
         <dependency>
+            <groupId>org.ipring</groupId>
+            <artifactId>ipring-000-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Log4j2 核心 + SLF4J 桥接（统一日志门面） -->
+        <!-- <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.20.0</version>
@@ -40,13 +46,39 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.20.0</version>
-        </dependency>
+        </dependency> -->
 
         <!-- Disruptor：全局异步依赖（无锁队列，性能远超普通队列） -->
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.4.4</version>
+        </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
+        <!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
 
