--- a/ipring-060-investigate-image/pom.xml
+++ b/ipring-060-investigate-image/pom.xml
@@ -61,7 +61,6 @@
             <version>1.2.2</version>
         </dependency>
 -->
-        <!--
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacpp</artifactId>
@@ -79,7 +78,7 @@
             <groupId>org.bytedeco</groupId>
             <artifactId>opencv-platform</artifactId>
             <version>4.5.5-1.5.7</version>
-        </dependency>-->
+        </dependency>
 
 
         <dependency>
